# MCP_Folder_restructure

./: README.md  __init__.py  analyzer.py  cli.py  folder-analyze  pyproject.toml  run-analysis.sh  server.py  setup-cron.sh  view-reports.sh
